# p4t

./: CMakeLists.txt  README.md
Variables/: CMakeLists.txt
Variables/include/: Variable.h  Variable.inl  VariableNew.h
Variables/src/: TestVariables.cpp
cmake/: CommonExeTask.cmake  CommonLibTask.cmake  Utils.cmake
test/: CMakeLists.txt
test/src/: Test.cpp
